# openvpn_gsuite_auth

./: .gitignore  .goreleaser.yaml  Dockerfile.vpnauth  README.md  go.mod  go.sum  gsuite_auth.go  gsuite_auth_config.yaml  gsuite_auth_config.yaml-example  references.txt  run_gsuite_auth_OTP.sh
.github/workflows/: build.yml  vpnauth_build.yml
openvpn-example-config/: client.conf-example  server.conf-examples
qrcreator/: .gitignore  go.mod  go.sum  qrcreator.go
vpnadmin/: app.py  forms.py  init_db.txt  pyproject.toml
vpnadmin/templates/: home.html
vpnauth/: README.md  __init__.py  app.py  init_db.txt  pyproject.toml  run.sh
vpnauth/static/ovpn/: howto.txt
vpnauth/templates/: 404.html  500.html  admin.html  base.html  edituser.html  home.html  otpauth.html  password.html  user.html
